Update introduction text

--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -139,13 +139,11 @@ theses_all_per_year <- read_csv(file = here("analysis", "data", "derived_data", 
 
 # Introduction
 
-The research presented in this paper was prompted by the closure of the European post-Master of Urbanism (EMU) of the Department of Urbanism at the Faculty of Architecture and the Built Environment, TU Delft. The EMU is an advanced master started jointly by TU Delft, KU Leuven, UPC Barcelona and Università IUAV di Venezia in 2005. The program distinguished itself internationally as a post-master open only to applicants with a prior MSc degree and experience in practice. With a combined research and design program, it provided a bridge towards advanced practice as well as research trajectories after graduation. All students followed an exchange semester at one of the other three program universities, allowing them to have a broader view on the field of urbanism. Although located in Europe and named "European", its geographic scope is global, especially at the level of graduation, considering that a large majority of students were of non-European origin. Influenced by the strong urbanism tradition of the four universities involved, the program yielded a group of almost 100 graduates.
+The research presented in this paper was prompted by the closure of the European post-Master of Urbanism (EMU) at TU Delft. The EMU is an advanced program started jointly by TU Delft, KU Leuven, UPC Barcelona and Università IUAV di Venezia in 2005. The program distinguished itself internationally as a post-master open only to applicants with a prior MSc degree and practical experience in urbanism or a related field. With a combined research and design curriculum, it provided a bridge towards both advanced practice and research trajectories after graduation. All students followed an exchange semester at one of the other three program universities, allowing them to have a broad, international view on the field of urbanism. Although located in Europe and named "European", its geographic scope is global, especially at the stage of graduation, considering that a large majority of students were of non-European origin. Influenced by the strong urbanism tradition of the four universities involved, the program yielded a group of almost 100 graduates at TU Delft.
 
-In 2021, TU Delft stepped out the program, but its approach has remained imprinted on the TU Delft approach to urbanism. <!--# paragraph to be elaborated -->
+In 2021, TU Delft stepped out from the program, but its approach has remained imprinted on the TU Delft approach to urbanism. Its core topics Urban Region Networks (Semester 1) and Constructing Sustainable Urban Landscapes (Semester 2), as well as the influence of the partner universities, mostly IUAV where most TU-Delft-hosted students spent their exchange semesters, are visible in the current MSc Urbanism and to some extent MSc Landscape Architecture tracks. There is general agreement on the considerable impact of the EMU on education and practice targeting sustainable urbanism, but why and how it is so remains implicit. Understanding what made the program impactful would be beneficial for targeted urbanism education and practice in response to current societal challenges. Having a close look at the assignments that were addressed by the program as well as research and design approaches used to tackle those topics throughout the years can provide valuable insight on what are the core, stable elements of urbanism practice, on the one hand, and how does the field need to adapt to changing societal challenges, on the other.
 
-In order to describe the legacy of the EMU program, including the distinctive features of its didactic approach, this paper aims to reveal the main topics taught in it and how those topics had evolved over the years of the program. To that end, the research presented in this paper employed a text mining approach to analyse the output of the EMU: 96 theses with an average of `r mean(str_length(emu$text_clean), na.rm = TRUE)` words produced over the years for the duration of the program between `r paste0(min(emu$graduation_year, na.rm = TRUE) - 2, "-", max(emu$graduation_year, na.rm = TRUE))`.
-
-<!-- If the focus of the paper shifts to topic modeling the paragraphs below can be swapped with the paragraphs describing the EMU program. -->
+To describe the legacy of the EMU program, including the distinctive features of its didactic approach, this paper aims to reveal the main topics taught in it and how those topics had evolved over the years of the program. To that end, the research presented in this paper employed a text mining approach to analyse the output of the EMU: 96 theses with an average of `r mean(str_length(emu$text_clean), na.rm = TRUE)` words produced over the years for the duration of the program between `r paste0(min(emu$graduation_year, na.rm = TRUE) - 2, "-", max(emu$graduation_year, na.rm = TRUE))`.
 
 **The rise of computational social sciences** [@wallach2018] provides tools and methods to summarise large sets of data that would not be possible with human annotation [@blei2012]. At the same time, urbanism research in general and urbanism education studies in particular that use statistical methods for unstructured data, such as topic modeling, are scarce. This is especially a missed opportunity considering that theses are representative outputs of educational programs that are increasingly available in digital repositories - the TU Delft repository was established in 2007, which is also the first graduation year of the EMU, and has been steadily growing since then. Patterns revealed in past education can potentially better inform future decisions in education in the field. Although the corpus analysed in this study is relatively small, it is large enough to make a quantitative analytical approach untenable.
 
