Add reference to dataset on 4TU.ResearchData

--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -159,3 +159,13 @@
 	note = {Publisher: Public Library of Science},
 	langid = {en}
 }
+
+
+@misc{forgaci2023,
+	title = {Mining Theses: The EMU Program (mintEMU) project data},
+	author = {Forgaci, Claudiu and Wilczynska, Aleksandra},
+	year = {2023},
+	doi = {10.4121/3295be57-969c-4f72-9c09-8e92aaff78a5},
+	url = {http://doi.org/10.4121/3295be57-969c-4f72-9c09-8e92aaff78a5},
+	langid = {English}
+}
