--- a/analysis/paper/paper.qmd
+++ b/analysis/paper/paper.qmd
@@ -16,8 +16,8 @@ date-format: long
 format: pdf
   # docx:
   #   reference-doc: "../templates/template.docx" # Insert path for the DOCX file
-  # pdf:
-  #   template: "../templates/plos_latex_template.tex"
+  pdf:
+    template: "../templates/plos_latex_template.tex"
 execute:
   echo: false
   warning: false
@@ -102,62 +102,44 @@ emu <- emu_metadata |>
   left_join(emu_raw, by = "ID") |> 
   left_join(emu_clean, by = "ID")
 
-theses_all_per_year <- read_csv(file = here("analysis", "data", "derived_data", "theses-per-year.csv"))
 
-# # Prepare data for analysis
-# ## Create lists of stop words
-# thesis_sw <- thesis_stopwords(
-#   add_stopwords = c("advisor", "prof", "professor", "fig", "ure", "figure", "ning", "dr", "ir", "drir"))
-# custom_sw <- c("space[s]?", "spatial", "plan", "(plann)\\w{0,}", "public", "development",
-#                "design", "process[es]?", "project[s]?", "figure[s]?", "map[s]?", "strateg(y|ies)", "intervention[s]?",
-#                "create", "exist", "analys(i|e)s") |>
-#   (\(.) paste0("\\b", ., "\\b"))() |>
-#   paste(collapse = "|")
-# emu_sw <- urbanism_stopwords(
-#   add_stopwords = c("emu", "european post[\\-]?(graduate)?[\\s]?master[s]? in urbanism",
-#                     "tu delft", "ku leuven", "upc barcelona", "iuav venice"))
-# 
-# emu$text_clean <- emu$text_clean |> 
-#   # Remove white spaces and punctuation, and change text to lower-case
-#   clean_basic() |>
-#   # Remove thesis-specific words
-#   str_remove_all(thesis_sw) |> 
-#   # Remove dataset-specific words
-#   str_remove_all(emu_sw)
-# 
-# # Concatenate ngrams
-# emu$text_clean <- emu |>
-#   mintEMU::c_ngrams(n_max = 3, text_col = "text_clean",
-#            id_col = "ID", min_freq = 20, lemma = TRUE)
-# 
-# # Words that were not included in ngrams are safe to remove now
-# emu$text_clean <- emu$text_clean |>
-#   # Words that were not included in ngrams are safe to remove now
-#   str_remove_all(custom_sw)
+theses_all_per_year <- read_csv(file = here("analysis", "data", "derived_data", "emu-theses-per-year.csv"))
+
+word_counts <- vector(mode = "numeric", length = nrow(emu))
+for (i in 1:nrow(emu)) {
+  word_counts[i] <- 
+    tidytext::unnest_tokens(tbl = emu[i,], output = word, input = text_clean) |> nrow()
+}
 
 ```
 
-# Introduction
+<!-- The actual document text starts here: -->
 
-The research presented in this paper was prompted by the closure of the European post-Master of Urbanism (EMU) at TU Delft. The EMU is an advanced program started jointly by TU Delft, KU Leuven, UPC Barcelona and Università IUAV di Venezia in 2005. The program distinguished itself internationally as a post-master open only to applicants with a prior MSc degree and practical experience in urbanism or a related field. With a combined research and design curriculum, it provided a bridge towards both advanced practice and research trajectories after graduation. All students followed an exchange semester at one of the other three program universities, allowing them to have a broad, international view on the field of urbanism. Although located in Europe and named "European", its geographic scope is global, especially at the stage of graduation, considering that a large majority of students were of non-European origin. Influenced by the strong urbanism tradition of the four universities involved, the program yielded a group of almost 100 graduates at TU Delft.
+# Introduction {#intro}
 
-In 2021, TU Delft stepped out from the program, but its approach has remained imprinted on the TU Delft approach to urbanism. Its core topics Urban Region Networks (Semester 1) and Constructing Sustainable Urban Landscapes (Semester 2), as well as the influence of the partner universities, mostly IUAV where most TU-Delft-hosted students spent their exchange semesters, are visible in the current MSc Urbanism and to some extent MSc Landscape Architecture tracks. There is general agreement on the considerable impact of the EMU on education and practice targeting sustainable urbanism, but why and how it is so remains implicit. Understanding what made the program impactful would be beneficial for targeted urbanism education and practice in response to current societal challenges. Having a close look at the assignments that were addressed by the program as well as research and design approaches used to tackle those topics throughout the years can provide valuable insight on what are the core, stable elements of urbanism practice, on the one hand, and how does the field need to adapt to changing societal challenges, on the other.
+The research presented in this paper was prompted by the closure of the European post-Master of Urbanism (EMU) at TU Delft. The EMU is an advanced program started jointly by TU Delft, KU Leuven, UPC Barcelona and Università IUAV di Venezia in 2005. The program distinguished itself internationally as a post-master open only to applicants with a prior MSc degree and practical experience in urbanism or a related field. With a combined research and design curriculum, it provided a bridge towards both advanced practice and research trajectories after graduation. All students followed an exchange semester at one of the other three program universities, allowing them to have a broad, international view on the field of urbanism. Although located in Europe and named "European", its geographic scope was global, especially at the stage of graduation, considering that a large majority of students were of non-European origin.
 
-To describe the legacy of the EMU program, including the distinctive features of its didactic approach, this paper aims to reveal the main topics taught in it and how those topics had evolved over the years of the program. To that end, the research presented in this paper employed a text mining approach to analyse the output of the EMU: 96 theses with an average of `r mean(str_length(emu$text_clean), na.rm = TRUE)` words produced over the years for the duration of the program between `r paste0(min(emu$graduation_year, na.rm = TRUE) - 2, "-", max(emu$graduation_year, na.rm = TRUE))`.
+In 2021, TU Delft stepped out from the program, but its approach has remained imprinted on the TU Delft approach to urbanism. Its core topics Urban Region Networks (Semester 1) and Constructing Sustainable Urban Landscapes (Semester 2), as well as the influence of the partner universities, mostly IUAV Venice where most TU-Delft-hosted students spent their exchange semesters, are visible in the current MSc Urbanism and to some extent MSc Landscape Architecture tracks. There is general agreement on the considerable impact of the EMU on education and practice targeting sustainable urbanism, but why and how it is so remains implicit. Understanding what made the program impactful would be beneficial for targeted urbanism education and practice in response to current societal challenges. Having a close look at the assignments that were addressed by the program as well as research and design approaches used to tackle those topics throughout the years can provide valuable insight into what are the core, stable elements of urbanism practice, on the one hand, and how does the field need to adapt to changing societal challenges, on the other.
 
-**The rise of computational social sciences** [@wallach2018] provides tools and methods to summarise large sets of data that would not be possible with human annotation [@blei2012]. At the same time, urbanism research in general and urbanism education studies in particular that use statistical methods for unstructured data, such as topic modeling, are scarce. This is especially a missed opportunity considering that theses are representative outputs of educational programs that are increasingly available in digital repositories - the TU Delft repository was established in 2007, which is also the first graduation year of the EMU, and has been steadily growing since then. Patterns revealed in past education can potentially better inform future decisions in education in the field. Although the corpus analysed in this study is relatively small, it is large enough to make a quantitative analytical approach untenable.
+To describe the legacy of the EMU program, including the distinctive features of its didactic approach, this paper aims to reveal the main topics taught in it and how those topics had evolved over the years of the program. To that end, the research presented in this paper employed a text mining approach targeting the output of the EMU: 96 theses with an average of `r round(mean(word_counts, na.rm = TRUE), -3)` words produced over the years for the duration of the program between `r paste0(min(emu$graduation_year, na.rm = TRUE) - 2, "-", max(emu$graduation_year, na.rm = TRUE))`.
 
-Acknowledging that opportunity, **this paper leverages topic modeling**, a branch of NLP, as an unsupervised machine learning method to reveal latent the semantic structure and relationships between latent topics in a large document collection [@muchene2021]. Latent Dirichlet Allocation (LDA) is broadly adopted in topic modeling [@muchene2021] as it uses a *soft clustering algorithm* in which objects can be part of multiple clusters (mixed membership approach) as opposed to hard clustering algorithms (single membership approaches) [@rüdiger2022a]. LDA uses as input a bag-of-words (BOW) model, more generally called the vector space model (VSM), in which documents in a corpus are decomposition into two low-dimensional matrices for doc-topic distribution and word-topic distribution, respectively. Although topic modeling in general automates the process of identifying topics through clustering, those topics need to be manually interpreted and labelled after the application of the algorithm [@rüdiger2022a]. Moreover, arguing for the right algorithm and a suitable number of clusters remains a challenge [@rüdiger2022]
+### Topic modeling {#topmod}
 
-In addition to describing the legacy of the EMU, **this paper showcases a reproducible research workflow**. It is part of a reproducible research compendium and accompanied by a published dataset. The analyses presented in this paper were carried out in the free and open-source statistical programming software R [@rcoreteam2023]. The research compendium is available at \[ADD CITATION\], the data is published in th 4TU.ResearchData repository \[ADD CITATION\] and it is available for exploration in a Shiny dashboard at \[ADD LINK\]
+**The rise of computational social sciences** [@wallach2018] provides tools and methods to summarise large sets of data that would not be possible with human annotation [@blei2012]. At the same time, urbanism research, in general, and urbanism education studies, in particular, rarely use statistical methods such as topic modeling to analyse unstructured data. This is especially a missed opportunity considering that theses are representative outputs of educational programs that are increasingly available in digital repositories - the TU Delft repository was established in 2007, which is also the first graduation year of the EMU, and has been steadily growing since then. Patterns revealed in past education can potentially better inform future decisions in education in the field.
+
+Although the corpus analysed in this study is relatively small, it is large enough to make a manually conducted quantitative analytical approach unfeasible.
+
+Acknowledging that opportunity, **this paper leverages topic modeling**, a branch of Natural Language Processing, as an unsupervised machine learning method to reveal latent semantic structure and relationships between latent topics in a large document collection [@muchene2021]. Latent Dirichlet Allocation (LDA) is broadly adopted in topic modeling [@muchene2021] as it uses a *soft clustering algorithm* in which objects can be part of multiple clusters (mixed membership approach) as opposed to hard clustering algorithms (single membership approaches) [@rüdiger2022a]. LDA uses as input a bag-of-words (BOW) model, more generally called the vector space model (VSM), in which documents in a corpus are decomposed into two low-dimensional matrices for document-topic distribution and word-topic distribution, respectively. Although topic modeling in general automates the process of identifying topics through clustering, those topics need to be manually interpreted and labelled after the application of the algorithm [@rüdiger2022a]. Moreover, arguing for the right algorithm and a suitable number of clusters remains a challenge [@rüdiger2022].
+
+In addition to describing the legacy of the EMU, **this paper showcases a reproducible research workflow**. Together with a published FAIR dataset, it forms a reproducible research compendium. The analyses presented in this paper were carried out in the free and open-source statistical programming software R [@rcoreteam2023]. The research compendium is available at \[ADD CITATION\], the data is published in th 4TU.ResearchData repository \[ADD CITATION\] and it is available for exploration in a Shiny dashboard at <http://mintemu_shiny.bk.tudelft.nl:3838/mintemu/>.
 
 -   Give an overview of th predominant topics and their evolution over the years of the EMU program.
 
-The following section describes the case study data, pre-processing steps and the topic modeling workflow. Then results of the analysis are summarised in... The paper concludes with a discussion on what the lessons learned from the EMU program mean for urbanism education and practice in general as well as on the broader challenges and opportunities of the text mining approach taken in the paper.
+The following section describes the case study data, pre-processing steps and the topic modeling workflow. The results of the analysis are then summarised in response to two research questions. The paper concludes with a discussion on what the lessons learned from the EMU program mean for urbanism education and practice in general as well as on the broader challenges and opportunities of the text mining approach taken in the paper.
 
-# Methods
+# Methods {#methods}
 
-To describe the legacy of the EMU program this research answers two questions: What were the main topics addressed in the EMU program? And how did those topics evolve throughout the duration of the program between 2007-2021? The paper then discusses to what extent those topics and evolution thereof were influenced by the assignments given to the students throughout their studies leading up to their thesis and by the exchange semester followed by the students. The research process is described in @fig-process-diagram.
+To describe the legacy of the EMU program this research answers two questions: What were the main topics addressed in the EMU program? And how did those topics evolve over the duration of the program? The paper then discusses to what extent those topics and evolution thereof were influenced by the assignments given to the students throughout their studies leading up to their thesis and by the exchange semester followed by the students. The research process is described in @fig-process-diagram.
 
 ```{r fig-process-diagram}
 #| fig-cap: Text mining process
@@ -167,84 +149,36 @@ mermaid("
 graph LR
     A[Data collection]-->B[Pre-processing]
     B-->C[Information extraction]
-    C-->D[Visualisation]
     C-->B
+    C-->D[Visualisation]
     D-->E[Results]
 ")
 ```
 
-1.  
-
-2.  Pre-processing ...
-
-3.  Information extraction ... topic modeling:
-
-3.1. tokenisation with a window of 1-3 words
-
-3.2. DTM, discarding terms with a frequency under a specified threshold
-
-3.3. Assign a K value manually
-
-3.4. Calculate topic coherence for K values ranging from 2 to K
-
-3.5. Plot K values agianst coherence scores and select K with the highest coherence value
-
-3.6. Fit model with K determined in previous step
-
-3.7. Get top 20 words in each topic to understand what it is about
-
-3.8. Run a cluster dendrogram (Hellinger distance) to see which topics should be grouped together
-
-3.9. Visualise topics with word clouds
-
-OR Use LDA clustering with 3 classes (corresponding to the three exchange universities) to see how well the clustering is aligned with where the student carried out their exchange semester. Use a confusion matrix to visualize the relation between real values and values assigned through clustering.
-
-4.  Visualisation ...
-
-5.  Results ...
-
 ## Data collection {#datacol}
 
-**The dataset consists of full texts and metadata of a subset of EMU theses written in English.** The full texts are available as PDF documents with unstructured layouts typical to an urbanism project in which text and various types of graphics are combined. The full-text documents were obtained either from the TU Delft Education Repository upon request (an API for downloading full-text data was not available at the time of data collection), or from the authors via email if not available on the repository. Metadata was downloaded from the TU Delft Education Repository or obtained from the EMU program coordination records when unavailable on the repository. Even though repository entries are openly accessible, licenses were not specified and thus it was unclear if the content of the theses can be mined and if the resulting data can be published. Considering the relatively small size of the corpus and the possibility of directly contacting the alumni network, permissions were requested individually. As a result, of the total of `r sum(theses_all_per_year$n_total)` theses presented in the EMU program, full-text documents were obtained for `r sum(theses_all_per_year$n_pdfs)` of which permissions were granted for `r nrow(emu)`. Only PDFs for which permission was obtained were included in the corpus. The final corpus contains at least one thesis for each year of graduation between `r min(emu$graduation_year)`-`r max(emu$graduation_year)` as shown in @tbl-data.
+**The dataset consists of full texts and metadata of a subset of EMU theses written in English.** The full texts are available as PDF documents with unstructured layouts typical to an urbanism project in which text and various types of graphics are combined. The full-text documents were obtained either from the TU Delft Education Repository upon request (an API for downloading full-text data was not available at the time of data collection), or from the authors via email if not available on the repository. Metadata was downloaded from the TU Delft Education Repository or obtained from the EMU program coordination records when unavailable on the repository. Even though repository entries are openly accessible, licenses were not specified and thus it was unclear if the content of the theses can be mined and if the resulting data can be published. Considering the relatively small size of the corpus and the possibility of directly contacting the alumni network, permissions were requested individually. As a result, of the total of `r sum(theses_all_per_year$n_total)` theses presented in the EMU program, full-text documents were obtained for `r sum(theses_all_per_year$n_pdfs)` of which permissions were granted for `r nrow(emu)`. Only PDFs for which permission was obtained were included in the corpus. The final corpus contains at least one thesis for each year of graduation between `r min(emu$graduation_year)`-`r max(emu$graduation_year)` as shown in @tbl-data-selection. @fig-map-theses shows the geographic spread of the theses included in the analysis.
 
-```{r tbl-data}
+```{r tbl-data-selection}
 #| tbl-cap: Overview of theses included in the analysis
 #| tbl-cap-location: top
 
 theses_all_per_year |> 
   select(grad_year, n_total, n_permissions) |> 
   mutate(grad_year = as.factor(grad_year),
-         `% of all theses` = scales::label_percent()(round(n_permissions / n_total, 4))) |> 
+         `% of all theses` = scales::label_percent()(round(n_permissions / n_total, 4))) |>
   bind_rows(data.frame(grad_year = "", 
                        n_permissions = nrow(emu), 
                        n_total = sum(theses_all_per_year$n_total),
                        `% of all theses` = scales::label_percent()(nrow(emu) / sum(theses_all_per_year$n_total)),
                        check.names = FALSE)) |> 
+  filter(!is.na(grad_year)) |> 
   rename(`No. theses` = n_total,
          `Graduation year` = grad_year,
-         `No. theses included` = n_permissions) |> 
+         `No. theses included` = n_permissions) |>
   kableExtra::kable(align = "lrrr")
 
 ```
-
-## Pre-processing
-
-The text was extracted from the original theses with . The text was
-
-Description of text extraction;
-
-The raw data available on 4TU.ResearchData at...The imported dataset contains the text data in the `text` column and related metadata in the other columns...
-
-For each thesis, henceforth referred to as "document", the following cleaning steps were performed:
-
-1.  Text was extracted from the original PDF documents with the the PyMuPDF Python package. During extraction, the front matter (cover page, colophon, contents, acknowledgements) and back matter (references) were removed. The page numbers used to exclude the front matter and back matter were manually identified and used as input for page selection during text extraction.
-2.  The extracted text was cleaned of line breaks, hyphenation, occurrences of the thesis title, author name, and page numbers.
-
-Only relevant metadata was kept
-
-The resulting dataset consisted of the `ID`, `title`, `graduation_year`, `graduation_semester`, `exchange_semester`, `location`, `latitude`, `longitude`, `abstract`, `text_raw` and `text_clean` <!--# check column names or add them in an inline code chunk with epoxy -->.
-
-Both the raw and cleaned data are published in the 4TU.ResearchData repository \[ADD CITATION\].
 
 ```{r fig-map-theses}
 #| fig-cap: "Location of EMU theses included in the analysis"
@@ -253,17 +187,46 @@ Both the raw and cleaned data are published in the 4TU.ResearchData repository \
 visualize_thesis_locations(emu)
 ```
 
-@fig-map-theses shows the geographic spread of the theses included in the analysis.
+## Pre-processing {#prepro}
+
+For each full text, henceforth referred to as "document", the following cleaning steps were performed:
+
+1.  Text was extracted from the original PDF documents with the the PyMuPDF Python package. During extraction, the front matter (cover page, colophon, table of contents, acknowledgements) and back matter (references, acknowledgements, appendices) were excluded. The page numbers used to exclude the front matter and back matter were manually identified and used as input for page selection during text extraction. The extracted text was stored in the `text_raw` column.
+2.  The extracted text was cleaned in R of line breaks, hyphenation, occurrences of the thesis title, author name, and page numbers. The cleaned text data was added to each thesis in a new column `text_clean`.
+3.  From the metadata only the title, graduation year, exchange semester and location of the case studied in the theses were kept. Column names were shortened and updated to follow the naming conventions used in the dataset.
+
+The resulting dataset consists of the id, `title`, `grad_year`, `exch_sem`, `loc`, `lat`, `lon`, `text_raw` and `text_clean`, as shown in @tbl-data-variables.
+
+```{r tbl-data-variables}
+
+# TODO make sure that the columns reported in the text match those included in the dataset
+
+tibble::tibble(Column = names(emu), 
+               Type = purrr::map(emu, class),
+               Completeness = 
+                 purrr::map(emu, is.na) |> 
+                 purrr::map(mean) |> 
+                 purrr::map(\(x){1 - as.numeric(x)}) |> 
+                 purrr::map(scales::label_percent())) |>
+  kableExtra::kable()
+
+```
+
+Both the raw and cleaned data are published in the 4TU.ResearchData repository [@forgaci2023].
 
 ## Information extraction
 
+<!-- Add intro to this section -->
+
+Information extraction as a process of extracting information from unstructured data.
+
 ### Tokenisation
 
-Word-level tokenisation was applied with the `unnest_tokens()` function of the `tidytext` package. This was preferred over other tokenisers as it produced results that work seamlessly with other `tidyverse` tools used in the analysis. `unnest_tokens()` removes punctuation, converts to lower-case, and separate all words into individual tokens.
+<!-- [Add to vignette:] Word-level tokenisation was applied with the `unnest_tokens()` function of the `tidytext` package. This was preferred over other tokenisers as it produced results that work seamlessly with other `tidyverse` tools used in the analysis. `unnest_tokens()` removes punctuation, converts to lower-case, and separate all words into individual tokens. -->
 
-Bigrams such as "public space" and trigrams such as "socio-spatial segregation" identified during preliminary EDA were concatenated by replacing white spaces and hyphens with underscores. This way, they could be included alongside words in the topic model.
+Word-level tokenisation was applied on the corpus. Bigrams such as "public space" and trigrams such as "socio-spatial segregation" identified with high frequency (at least 20 on a corpus level) during EDA were concatenated by replacing white spaces and hyphens with underscores. This way, they could be included alongside words in the topic model.
 
-For analyses in which word-level tokens were used, stop words, i.e., common words or words that do not add much meaning, were removed in the pre-processing stage. Global, subject-specific and document stop words [@hvitfeldt2021a] were differentiated. As all theses were written in English, the pre-made "snowball" lexicon was used to remove global stop words. <!-- We tried to create a custom global stop word list on the entire corpus, by removing high-frequency words, starting with 20 words and increasing by 10 until reaching words that are not appropriate as stop words, but no significant improvement was observed in the result. --> We manually constructed a list of subject-specific stop words based on our domain knowledge. Words that are commonly used to structure a theses, such as "preface", "contents", and "introduction", were added as subject-specific stop words as well. Finally, titles and author names were removed as document stop words. In the next pre-processing step, we normalised the resulting words, that is, reduced them to their canonical dictionary forms, the resulting words were lemmatised [@hvitfeldt2021a]. Lemmatisation was preferred over stemming as the former tends to be more meaningful and less degrading than the latter.
+S**top words, i.e., common words or words that do not add much meaning, were removed**. Global, subject-specific and document stop words [@hvitfeldt2021a] were differentiated. As all theses were written in English, the pre-made "snowball" lexicon was used to remove global stop words. <!-- We tried to create a custom global stop word list on the entire corpus, by removing high-frequency words, starting with 20 words and increasing by 10 until reaching words that are not appropriate as stop words, but no significant improvement was observed in the result. --> We manually constructed a list of subject-specific stop words based on our domain knowledge. Words that are commonly used to structure a theses, such as "preface", "contents", and "introduction", were added as subject-specific stop words as well. Finally, titles and author names were removed as document stop words. In the next pre-processing step, we normalised the resulting words, that is, reduced them to their canonical dictionary forms, the resulting words were lemmatised [@hvitfeldt2021a]. Lemmatisation was preferred over stemming as the former tends to be more meaningful and less degrading than the latter.
 
 ```{r eval=FALSE}
 ent1 <- spacyr::entity_extract(spacyr::spacy_parse(emu$text_clean[1:13]))
@@ -297,23 +260,24 @@ tm_summary <- # incomplete code
 entity::location_entity(head_text(emu$text_clean[15], sub_end = 50000))
 ```
 
-```{r tokenise}
-
-# TODO create tokenizer function
-
-# Unnest tokens and remove words of one and two letters
-emu_words <- emu |> 
-  select(ID, text_clean) |> 
-  unnest_tokens(output = word, input = text_clean) |>  # remove punctuation, convert to lower-case, separate all words
-  anti_join(tidytext::stop_words, by = "word") |>  # remove stop words
-  mutate(word = textstem::lemmatize_words(word)) |>  # lemmatise words
-  filter(nchar(word) >= 3)  # keep only words that are at least three letters long
-
-# # Check if concatenated ngrams are retained
-# sort(table(unlist(str_match_all(emu_words$word, "[A-Za-z]+(?:_[A-Za-z]+)+"))), decreasing = TRUE)
+```{r tokenize}
+# Unnest tokens (words, bigrams and trigrams) and remove words of one and two letters
+emu_words <- tokenize(emu)
 ```
 
 Finally, additional checks were made to the document in search for previously undetected stop words. Short words of one and two letters could be safely removed, while three-letter words were kept, as many of those, including "map" and "low", were meaningful and occurring in high frequency.
+
+### Document-term matrix
+
+The topic model requires a document-term matrix (DTM) as input. To reduce the size of the DTM, words with a frequency lower than 5 were excluded.
+
+```{r dtm}
+# Prepare document-term matrix as input for LDA model
+emu_dtm <- convert_to_dtm(emu_words, 
+                          id_col = "ID", 
+                          word_col = "word", 
+                          min_term_freq = 5)
+```
 
 ### Topic model
 
@@ -336,26 +300,22 @@ Describe model parameters:
 Determining tuning parameters:
 
 -   The number of topics was qualitatively determined
--   Evaluating the number of topics quantitatively requires can be done through the measure of **topic coherence**
+-   Evaluating the number of topics quantitatively can be done through the measure of **topic coherence**
+    -   Calculate topic coherence for K values ranging from 2 to K
+    -   Plot K values against coherence scores and select K with the highest coherence value
 
-LDA requires a document-term matrix (DTM) as input. To reduce the size of the DTM, words with a frequency lower than 5 were excluded.
+A K with a smaller value will yield more general topics whereas a K with a high value will result in more specific topics. Hence, finding a suitable value entails a trade-off between interpretability and specificity. This is very much dependent on the data at hand and the research question.
 
-```{r topic-model-dtm}
-
-# TODO should tf or tf-idf be used for weighting?
-
-# Prepare document-term matrix as input for LDA model
-emu_dtm <- convert_to_dtm(emu_words, 
-                          id_col = "ID", 
-                          word_col = "word", 
-                          min_term_freq = 5)
-```
+#### Determining the value of K empirically
 
 ```{r topic-model-lda-1}
-# Fit LDA model with K clusters
-## Determine K value empirically
+# Determine K value empirically
 k = get_number_of_topics(emu_dtm)
-# TODO run the model with the empirically determined k and compare with results using qualitative value
+```
+
+Fit model with K determined in previous step...
+
+```{r topic-model-lda-1}
 emu_lda_k <- LDA(emu_dtm, k = k, method = "Gibbs",
                control = list(seed = 2023, iter = 500, verbose = 25))
 
@@ -364,7 +324,60 @@ theta_k <- posterior(emu_lda_k)$topics
 
 # Add pseudo-names to topics based on the top 5 words in each topic
 topic_names_k <- name_topics(beta_k)
+```
 
+Get top 20 words in each topic to understand what it is about
+
+Run a cluster dendrogram (Hellinger distance) to see which topics should be grouped together
+
+```{r}
+# Perform hierarchical cluster analysis.
+
+rownames(beta_k) <- topic_names_k
+dend <- as.dist(beta_k) |> 
+  hclust() |> 
+  as.dendrogram()
+
+# Plot with Color in function of the cluster
+leafcolor <- colormap::colormap(colormap = colormap::colormaps$viridis, nshades = 5, format = "hex", alpha = 1, reverse = FALSE)
+dend |> 
+  # set("labels_col", value = leafcolor, k=5) %>%
+  # set("branches_k_color", value = leafcolor, k = 5) %>%
+  # plot(horiz=TRUE, axes=FALSE)
+  ggdendro::ggdendrogram(rotate = TRUE)
+
+
+
+dendr    <- ggdendro::dendro_data(dend, type="rectangle") # convert for ggplot
+clust    <- cutree(as.dist(beta_k) |> hclust(),k = 5)                    # find 2 clusters
+clust.df <- data.frame(label=names(clust), cluster=factor(clust))
+# dendr[["labels"]] has the labels, merge with clust.df based on label column
+dendr[["labels"]] <- merge(dendr[["labels"]],clust.df, by="label")
+# plot the dendrogram; note use of color=cluster in geom_text(...)
+ggplot() + 
+  geom_segment(data=ggdendro::segment(dendr), aes(x=x, y=y, xend=xend, yend=yend)) + 
+  geom_text(data=ggdendro::label(dendr), aes(x, y - 0.002, label=label, hjust=0, color=cluster), 
+           size=3) +
+  coord_flip() + 
+  scale_y_reverse(expand=c(0.1, 0.1)) +
+  theme(axis.line.y=element_blank(),
+        axis.ticks.x=element_blank(),
+        axis.ticks.y=element_blank(),
+        axis.text.x=element_blank(),
+        axis.text.y=element_blank(),
+        axis.title.x=element_blank(),
+        axis.title.y=element_blank(),
+        panel.background=element_rect(fill="white"),
+        panel.grid=element_blank())
+```
+
+Visualise topics with word clouds
+
+#### Determining the value of K qualitatively
+
+OR Use LDA clustering with 3 classes (corresponding to the three exchange universities) to see how well the clustering is aligned with where the student carried out their exchange semester. Use a confusion matrix to visualize the relation between real values and values assigned through clustering.
+
+```{r topic-model-lda-1}
 ## Determine K value qualitatively
 ## K = 5 corresponds to the 2 TUD semesters and the 3 exchange semesters combined 
 emu_lda_5 <- LDA(emu_dtm, k = 5, method="Gibbs",
@@ -452,7 +465,7 @@ viz_df_with_year <-
     cols = -document,
     names_to = "topic",
     values_to = "value") |> 
-  left_join(mutate(emu, ID = as.factor(ID), "year" = graduation_year), by = c("document" = "ID"))
+  left_join(mutate(emu, ID = as.factor(ID), "year" = grad_year), by = c("document" = "ID"))
 
 # TODO change to discrete colors
 # TODO try representing this as a line chart
@@ -472,22 +485,10 @@ viz_df_with_year |>
 # TODO check if this can be included in the Shiny dashboard
 # TODO remove from paper
 # TODO how to show distances between topics in the paper?
-# Function to approximate the distance between topics
-svd_tsne <- function(x) tsne(svd(x)$u)
 
-# Convert DTM into JSON required by the LDAvis package
-json <- LDAvis::createJSON(
-  phi = beta_5, 
-  theta = theta_5, 
-  doc.length = rowSums(as.matrix(emu_dtm)), 
-  vocab = colnames(emu_dtm), 
-  term.frequency = colSums(as.matrix(emu_dtm)),
-  mds.method = svd_tsne,
-  plot.opts = list(xlab="", ylab="")
-)
-
-# Visualise topics model with LDAvis
-LDAvis::serVis(json)
+visualise_lda(phi = beta_5, 
+              theta = theta_5, 
+              dtm = emu_dtm)
 
 ```
 
@@ -497,7 +498,7 @@ LDAvis::serVis(json)
 emu_topics <- tidy(emu_lda_5, matrix = "beta")
 
 # The top n most common words in each topic
-emu_top_terms <- get_top_words_per_topic(emu_topics, 20)
+emu_top_terms <- get_top_words_per_topic(data = emu_topics, top_n = 20)
 
 # TODO create visualisation function
 emu_top_terms |> 
@@ -540,19 +541,19 @@ emu_documents |>
 emu_documents |>
   mutate(document = as.numeric(document)) |> 
   inner_join(emu |> 
-               select(ID, graduation_year), 
+               select(ID, grad_year), 
              by = c("document" = "ID")) |> 
   ggplot(aes(x = reorder(str_sub(document, 1, 50), gamma), y = gamma, fill = topic)) + 
   geom_bar(stat = "identity") + 
   coord_flip() + 
-  facet_wrap(~ graduation_year, ncol = 1, scales = "free", drop = TRUE)
+  facet_wrap(~ grad_year, ncol = 1, scales = "free", drop = TRUE)
 
 # TODO check if this plot is useful and, if not, remove it
 emu_documents |> 
   inner_join(emu |> 
-               select(ID, graduation_year), 
+               select(ID, grad_year), 
              by = c("document" = "ID")) |> 
-  ggplot(aes(x = factor(graduation_year), y = topic, fill = factor(topic))) +
+  ggplot(aes(x = factor(gradyear), y = topic, fill = factor(topic))) +
   geom_col()
 ```
 
@@ -678,7 +679,7 @@ emu_bigrams_top_all <- emu_bigrams |>
   mutate(ngram = reorder(ngram, n))
 
 emu_bigrams_top |>
-  filter(ID == unique(ID)[1:10]) |> 
+  filter(ID == unique(ID)[1:20]) |> 
   ggplot(aes(x = ngram, y = n, fill = ID)) +
   geom_col() +
   xlab(NULL) +
@@ -790,7 +791,7 @@ The high-dimensional sparse matrix of word features is projected into reduced, 1
 
 ```{r word-embeddings-svd}
 
-# Determine word vectors using SVD, a method for dimensionality reduction
+# Deter                                                                        mine word vectors using SVD, a method for dimensionality reduction
 tidy_word_vectors <- tidy_pmi |> 
   widely_svd(
     item1, item2, pmi,
