--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -169,3 +169,17 @@
 	url = {http://doi.org/10.4121/3295be57-969c-4f72-9c09-8e92aaff78a5},
 	langid = {English}
 }
+
+@article{benchimol2022,
+	title = {Text mining methodologies with R: An application to central bank texts},
+	author = {Benchimol, Jonathan and Kazinnik, Sophia and Saadon, Yossi},
+	year = {2022},
+	month = {06},
+	date = {2022-06},
+	journal = {Machine Learning with Applications},
+	pages = {100286},
+	volume = {8},
+	doi = {10.1016/j.mlwa.2022.100286},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S2666827022000202},
+	langid = {en}
+}
